Ændret wildcard dimse

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -30,7 +30,8 @@ dato:=$(shell date +%d/%m-%Y> dato.sgml; cat dato.sgml)
 badsgmlfiles=dato.sgml version.sgml magic.sgml stikord.sgml bogoversigt.sgml ophavsret.sgml
 
 # Her er  en liste af alle sgml
-allesgmlfiles:=$(wildcard *.{sgml,xml})
+# allesgmlfiles:=$(wildcard *.{sgml,xml})
+allesgmlfiles:=$(wildcard *.sgml) $(wildcard *.xml)
 
 # Her er en liste af sgml-filer der skal checkes
 sgmlfiler:=$(filter-out $(badsgmlfiles),$(allesgmlfiles))
