Tvinger sektions og kapitel numre ind

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -175,7 +175,7 @@ bog/index.html: $(sgmlfiler)
 	collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index
 	rm -rf bog/
 	mkdir bog
-	db2html  -V  %use-id-as-filename% bog.sgml
+	db2html  -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	cp linuxbog.css bog
 	cp images/*.png bog
 ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
