Byg Palm-udgaven når der blot køres `make`

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -60,7 +60,7 @@ tidy:=$(wildcard /usr/bin/tidy)
 
 ################################################################################
 # her er det der skal laves
-all: start ekstra html pdf sgml pakhtml eksempelbackup stop
+all: start ekstra html pdf sgml pakhtml palmpilot eksempelbackup stop
 
 
 ################################################################################
