--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -121,7 +121,7 @@ ifneq   ("$(plucker)","")
 	cp ../misc/*.pdb palm
 	cp ../misc/gpl.txt palm
 	cp ../misc/plucker.txt palm
-	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb palm/*txt )
+	(zip $(targetname)-palm--$(version).zip palm/*.prc palm/*.pdb palm/*txt )
 else
 	@echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
