linuxbogurl defineret - man skal lige tilføje dette til bog.sgml for at det virker. Herefter kan man referere til &linuxbogurl; eller direkte til &linuxbogurl;/underkatalog/fil.
linuxbogurl kan ændres i linuxbog/Makefile.subdir

<!ENTITY % url-entities SYSTEM "linuxbogurl.sgml">
  %url-entities;  <!-- This is where we include it -->

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,6 +70,8 @@ start:
 	@echo "-------------------------------------------"
 	@echo Version er $(version)
 	@echo Dato sat til $(dato)
+	@echo '<!ENTITY linuxbogurl "cvs.linuxbog.dk">' > linuxbogurl.sgml
+
 
 
 ################################################################################
