Plucker larmer meget

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -118,7 +118,7 @@ $(targetname)-$(version).palm.zip: $(sgmlfiler) html
 ifneq   ("$(plucker)","")
 	rm -f $(targetname)-$(version).palm.zip $(targetname)-$(version).palm.tar.gz
 	rm -f palm/*.prc palm/*.pdb
-	(cd palm;plucker-build -v -P . -f $(targetname) `pwd`/home.html)
+	(cd palm;plucker-build -V 0 -P . -f $(targetname) `pwd`/home.html)
 	cp ../misc/*.prc palm
 	cp ../misc/*.pdb palm
 	cp ../misc/gpl.txt palm
