--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -248,7 +248,7 @@ endif
 ################################################################################
 clean:
 	@echo clean $(targetshortname)
-	@rm -rf dato.sgml version.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
+	@rm -rf dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
 ifeq ($(lokmake),Makefile_local)
 	@echo X $(lokmake) X
 	@make -f Makefile_local clean
