hvorfor zipper vi PDF-filerne? Ud med det

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -199,8 +199,8 @@ endif
 # Byg PDF filen
 ################################################################################
 
-pdf: $(targetname)-pdf-$(version).zip
-$(targetname)-pdf-$(version).zip: $(sgmlfiler)
+pdf: $(targetname)-$(version).pdf
+$(targetname)-$(version).pdf: $(sgmlfiler)
 	@echo ".........................................."
 	@echo "Target $(targetshortname):pdf"
 	@echo ".........................................."
@@ -215,7 +215,6 @@ $(targetname)-pdf-$(version).zip: $(sgmlfiler)
 	(cd tempdir; db2pdf bog.sgml; db2pdf bog.sgml)
 	mv tempdir/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
-	zip $(targetname)-pdf-$(version).zip $(targetname)-$(version).pdf
 	rm -rf tempdir
 	@echo "Done PDF (pdf)"
 	@echo ""
