--- a/Makefile_oldstyle
+++ b/Makefile_oldstyle
@@ -22,24 +22,24 @@ filer:  start
 	@for dir in $(SUBDIRS); do \
 		$(MAKE) -C $$dir; \
 	done;
-	$(MAKE) -C alle -f Makefile
+	$(MAKE) -C alle -f Makefile_oldstyle
 
 pspdf:	start
 	@for dir in $(SUBDIRS); do \
 		$(MAKE) -C $$dir pspdf; \
 	done;
 
-	$(MAKE) -C alle -f Makefile pspdf
+	$(MAKE) -C alle -f Makefile_oldstyle pspdf
 
 html:	start
 	@for dir in $(SUBDIRS); do \
 		$(MAKE) -C $$dir html; \
 	done;
 
-	$(MAKE) -C alle -f Makefile html
+	$(MAKE) -C alle -f Makefile_oldstyle html
 
 palmpilot: palmpilot-hver-enkelt
-	$(MAKE) -C alle -f Makefile palmpilot
+	$(MAKE) -C alle -f Makefile_oldstyle palmpilot
 
 palmpilot-hver-enkelt: start
 	@for dir in $(SUBDIRS); do \
@@ -67,9 +67,9 @@ clean: start
 		rm -f $$dir/linuxbog-$$dir.spec; \
 	done;
 
-	$(MAKE) -C alle -f Makefile clean
+	$(MAKE) -C alle -f Makefile_oldstyle clean
 
-	$(MAKE) -C samling -f Makefile clean
+	$(MAKE) -C samling -f Makefile_oldstyle clean
 
 	rm -rf cvs2html
 	rm -rf Friheden_palm.tgz
