--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -40,19 +40,10 @@ sgmlfiler:=$(filter-out $(badsgmlfiles),$(allesgmlfiles))
 alleeksfiles:=$(wildcard eksempler/*)
 
 # Lokal Makefile ?
-lokmake:=$(wildcard Makefile_local)
+#lokmake:=$(wildcard Makefile_local)
 
 # Her er en liste af sgml-filer der skal checkes
 eksfiler:=$(filter-out eksempler/CVS,$(alleeksfiles))
-
-# Har vi Perl-modulet Image::Size installeret
-imagesize:=$(wildcard /usr/lib/perl5/site_perl/5.005/Image/Size.pm)
-
-# Har vi Plucker inde
-plucker:=$(wildcard /usr/bin/plucker-build)
-
-# Har vi tidy installeret?
-tidy:=$(wildcard /usr/bin/tidy)
 
 ################################################################################
 # De egentlige targets
@@ -60,7 +51,7 @@ tidy:=$(wildcard /usr/bin/tidy)
 
 ################################################################################
 # her er det der skal laves
-all: start ekstra html pdf sgml pakhtml palmpilot eksempelbackup stop
+all: start html pdf sgml pakhtml palmpilot eksempelbackup stop
 
 
 ################################################################################
@@ -70,7 +61,7 @@ start:
 	@echo "-------------------------------------------"
 	@echo Version er $(version)
 	@echo Dato sat til $(dato)
-	@echo '<!ENTITY linuxbogurl "cvs.linuxbog.dk">' > linuxbogurl.sgml
+#	@echo '<!ENTITY linuxbogurl "cvs.linuxbog.dk">' > linuxbogurl.sgml
 
 
 
@@ -95,7 +86,7 @@ ekstra:
 ################################################################################
 # Pak SGML-filerne sammen
 ################################################################################
-
+if BUILD_SGML
 sgml: $(targetname)-sgml-$(version).tar.gz
 $(targetname)-sgml-$(version).tar.gz: $(sgmlfiler)
 	@echo ".........................................."
@@ -104,18 +95,18 @@ $(targetname)-sgml-$(version).tar.gz: $(sgmlfiler)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile)
 	(cd ..;ln -sf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/$(targetname).sgml.tar.gz)
 	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.{sgml,xml} $(targetshortname)/linuxbog.css $(targetshortname)/Makefile)
-
+endif BUILD_SGML
 
 ################################################################################
 # Byg Palm Pilot udgaven
 ################################################################################
 
+if BUILD_PALM
 palmpilot: $(targetname)-$(version).palm.zip
 $(targetname)-$(version).palm.zip: $(sgmlfiler) html
 	@echo ".........................................."
 	@echo "Target $(targetshortname):palmpilot"
 	@echo ".........................................."
-ifneq   ("$(plucker)","")
 	rm -f $(targetname)-$(version).palm.zip $(targetname)-$(version).palm.tar.gz
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -V 0  -P . -f $(targetname) `pwd`/home.html)
@@ -124,15 +115,17 @@ ifneq   ("$(plucker)","")
 	cp ../misc/gpl.txt palm
 	cp ../misc/plucker.txt palm
 	(zip $(targetname)-palm-$(version).zip palm/*.prc palm/*.pdb palm/*txt )
-else
-	@echo "Du bør installere plucker for at kunne lave palm-udgaven"
-endif
+else !BUILD_PALM
+palmpilot:	
+	@echo "Overspringer palmpilot target"
+endif !BUILD_PALM
 
 
 ################################################################################
 # pak HTML-filer ned
 ################################################################################
 
+if BUILD_PAKHTML
 pakhtml: $(targetshortname)/$(targetname)-html-$(version).tar.gz
 
 $(targetshortname)/$(targetname)-html-$(version).tar.gz: bog/index.html
@@ -156,12 +149,13 @@ $(targetshortname)/$(targetname)-html-$(version).tar.gz: bog/index.html
 	@@echo "Done HTML pakning (pakhtml)"
 	@echo ""
 	@echo ""
-
+endif BUILD_PAKHTML
 
 ################################################################################
 # Byg HTML-filerne
 ################################################################################
 
+if BUILD_HTML
 html: bog/index.html 
 bog/index.html: $(sgmlfiler) 
 	@echo ".........................................."
@@ -179,28 +173,29 @@ bog/index.html: $(sgmlfiler)
 	db2html  -V  %use-id-as-filename% -V  %chapter-autolabel% -V %section-autolabel% bog.sgml
 	cp linuxbog.css bog
 	cp images/*.png bog
-ifeq	($(shell perl -e 'use Image::Size; print "1"' 2> /dev/null), 1)
-	(cd bog;perl ../../misc/insertimagesize)
-else
+if HAVE_PERL_IMAGE_SIZE
+	(cd bog;perl ../misc/insertimagesize)
+else !HAVE_PERL_IMAGE_SIZE
 	@echo "Du bør installere Perl-modulet Image:Size"
-endif
-ifeq	($(shell if which tidy >/dev/null 2>&1; then echo -n 1; fi;), 1)
+endif !HAVE_PERL_IMAGE_SIZE
+if HAVE_TIDY
 	(cd bog;tidy -latin1 -f err.txt -imu *html;rm -f err.txt)
-else
+else !HAVE_TIDY
 	@echo "Du bør installere tidy"
-endif
+endif !HAVE_TIDY
 	(cd bog;rm -f apprevhist.html;ln -sf *apprevhist.html apprevhist.html)
 	rm -rf tempdir 
 	@echo "Done HTML (html)"
 	@echo ""
-
+endif BUILD_HTML
 
 ################################################################################
 # Byg PDF filen
 ################################################################################
 
-pdf: $(targetname)-$(version).pdf
-$(targetname)-$(version).pdf: $(sgmlfiler)
+if BUILD_PDF
+pdf: $(targetname)-pdf-$(version).zip
+$(targetname)-pdf-$(version).zip: $(sgmlfiler)
 	@echo ".........................................."
 	@echo "Target $(targetshortname):pdf"
 	@echo ".........................................."
@@ -209,16 +204,18 @@ $(targetname)-$(version).pdf: $(sgmlfiler)
 	rm -rf tempdir
 	mkdir tempdir
 	cp *.{sgml,xml} tempdir
-	cp images/*png tempdir
-	(cd tempdir;jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml)
-	(cd tempdir;collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
-	(cd tempdir; db2pdf bog.sgml; db2pdf bog.sgml)
+	ln -s images/*png tempdir/.
+	(cd tempdir && jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml)
+	(cd tempdir && collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
+	(cd tempdir && echo "Running db2pdf 1/2" && db2pdf bog.sgml; true)
+	(cd tempdir && echo "Running db2pdf 2/2" && db2pdf bog.sgml; true)
+
 	mv tempdir/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	rm -rf tempdir
 	@echo "Done PDF (pdf)"
 	@echo ""
-
+endif BUILD_PDF
 
 ################################################################################
 test:
@@ -231,28 +228,36 @@ test:
 
 eksempelbackup:  $(targetname)-eksempler-$(version).tar.gz
 $(targetname)-eksempler-$(version).tar.gz : $(eksfiler)
-ifneq    ("$(eksfiler)","")
-	rm -f $(targetname)-eksempler-$(version).tar.gz  
-	touch $(targetname)-eksempler-$(version).tar
-	cat dato.sgml > eksempler/BACKUPDATO
-	(cd ..;tar cvf  $(targetshortname)/$(targetname)-eksempler-$(version).tar $(targetshortname)/eksempler/BACKUPDATO)
-	rm -f eksempler/BACKUPDATO
-	find eksempler -type f | grep -v "/CVS/" | xargs -l1 -i= -r tar rvf $(targetname)-eksempler-$(version).tar =
-	gzip -9 $(targetname)-eksempler-$(version).tar
-else
-	@echo "Bogen" $(targetname) "har ikke nogen eksempler";
-endif
+	if test "x$(eksfiler)" != "x" ; then \
+		rm -f $(targetname)-eksempler-$(version).tar.gz && \
+		touch $(targetname)-eksempler-$(version).tar && \
+		cat dato.sgml > eksempler/BACKUPDATO && \
+		(cd ..;tar cvf  $(targetshortname)/$(targetname)-eksempler-$(version).tar $(targetshortname)/eksempler/BACKUPDATO) && \
+		rm -f eksempler/BACKUPDATO && \
+		find eksempler -type f | grep -v "/CVS/" | xargs -l1 -i= -r tar rvf $(targetname)-eksempler-$(version).tar = && \
+		gzip -9 $(targetname)-eksempler-$(version).tar; \
+	else \
+		@echo "Bogen" $(targetname) "har ikke nogen eksempler"; \
+	fi
+
+
+################################################################################
+#
+# distclean-local - hook til automake.
+# Cleaner så det passer til en dist
+distclean-local:	
+	@rm -rf autom4te.cache magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)* palm/*.prc palm/*.pdb sideantal.txt *~ .#*[0-9]
 
 
 ################################################################################
 clean:
 	@echo clean $(targetshortname)
 	@rm -rf dato.sgml version.sgml linuxbogurl.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*  palm/*.prc palm/*.pdb sideantal.txt *~*~ .#*[0-9]
-ifeq ($(lokmake),Makefile_local)
-	@echo X $(lokmake) X
-	@make -f Makefile_local clean
-else
-	@echo "Ingen lokal Makefile"
-endif
-	@echo "Færdig med clean $(targetshortname)"
+#ifeq ($(lokmake),Makefile_local)
+#	@echo X $(lokmake) X
+#	@make -f Makefile_local clean
+#else
+#	@echo "Ingen lokal Makefile"
+#endif
+#	@echo "Færdig med clean $(targetshortname)"
 
