Et par fejl rettet

--- a/Makefile.in
+++ b/Makefile.in
@@ -31,6 +31,7 @@ default:
 # NB: Det her target skal laves om, sort of... måske...
 #faelles: faelles-filer/*.css faelles-filer/*.sgml
 faelles:	
+	@echo "TODO: Ville være rart om faelles kunne afhænge af tidsstempler, noget"
 	@for dir in $(SUBDIRS) ; do \
 		echo "*** Installerer fælles filer i $$dir" && \
                 cp --update faelles-filer/*.sgml $$dir && \
@@ -41,7 +42,7 @@ faelles:
 	@if test "x$(ALLE)" != "x" ; then \
 		echo '<!ENTITY linuxbogurl "cvs.linuxbog.dk">' \
 		      > alle/linuxbogurl.sgml || exit; \
-	endif
+	fi
 
 
 ################################################################################
@@ -51,7 +52,7 @@ faelles:
 # relevante biblioteker.
 .PHONY: bootstrap
 bootstrap:	faelles
-	@echo "TODO: Ville være rart om det kunne afhænge af tidsstempler, noget"
+	@echo "TODO: Ville være rart om bootstrap kunne afhænge af tidsstempler, noget"
 	@for dir in $(SUBDIRS) $(ALLE); do \
 		echo "*** Kører bootstrap i $$dir" && \
 		cp --update bootstrap.subdir $$dir/bootstrap && \
