En til enkelt fejl rettet

--- a/Makefile.in
+++ b/Makefile.in
@@ -39,9 +39,9 @@ faelles:
 		      > $$dir/linuxbogurl.sgml || exit; \
 	done
 	@if test "x$(ALLE)" != "x" ; then \
-                cp --update faelles-filer/*.sgml $$dir && \
+                cp --update faelles-filer/*.sgml $(ALLE) && \
 		echo '<!ENTITY linuxbogurl "cvs.linuxbog.dk">' \
-		      > alle/linuxbogurl.sgml || exit; \
+		      > $(ALLE)/linuxbogurl.sgml || exit; \
 	fi
 
 
