OK, det er sent...

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -204,7 +204,7 @@ $(targetname)-pdf-$(version).zip: $(sgmlfiler)
 	rm -rf tempdir
 	mkdir tempdir
 	cp *.{sgml,xml} tempdir
-	(cd tempdir && ln -s ../images/*png tempdir/.)
+	(cd tempdir && ln -s ../images/*png .)
 	(cd tempdir && jw -V html-index -V nochunks -f docbook -b html -o bog bog.sgml)
 	(cd tempdir && collateindex.pl -s Symboler -t Stikordsregister -g -i stikord  -o stikord.sgml bog/HTML.index)
 	(cd tempdir && echo "Running db2pdf 1/2" && db2pdf bog.sgml; true)
