--- a/alle/Makefile_oldstyle
+++ b/alle/Makefile_oldstyle
@@ -60,10 +60,10 @@ sgml: $(sgmlfiler) $(targetname)-sgml-$(version).tar.gz $(targetname)-sgml-$(ver
 
 
 $(targetname)-sgml-$(version).tar.gz:
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-sgml-$(version).tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile*)
 
 $(targetname)-sgml-$(version).zip:
-	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.sgml $(targetshortname)/Makefile)
+	(cd ..;zip $(targetshortname)/$(targetname)-sgml-$(version).zip -r $(targetshortname)/*.sgml $(targetshortname)/Makefile*)
 
 palmpilot: $(targetname)-palm-$(version).zip
 
